[tool.poetry]
name = "donkeykongonlineleaderboard"
version = "0.1.0"
description = ""
authors = ["Ricky Grassmuck <rigrassm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
