[tool.poetry]
name = "donkeykongonlineleaderboard"
version = "0.1.0"
description = ""
authors = ["Ricky Grassmuck <rigrassm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
click = "^8.1.3"
pytesseract = "^0.3.10"
pillow = "^9.4.0"
sortedcontainers = "^2.4.0"
numpy = "^1.24.1"
tabulate = "^0.9.0"
textual = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pyright]
 reportGeneralTypeIssues = "information"